# uservice-dynconf

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  Makefile.local  README.md  THIRD_PARTY.md  config_vars_testing.yaml  docker-compose.yml  log.txt  log_2.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  cla.yml  docker.yaml
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  config_vars_testing.yaml  configs_vars.yaml  dynamic_config_fallback.json  static_config.yaml  static_config.yaml.in
docs/api/: admin.yaml  api.yaml  v1.yaml  v2.yaml
old/: test_get_configs_uuid.py  test_get_services.py  test_patch_configs_uuid.py  test_post_configs.py
postgresql/data/: custom_configs.sql  default_configs.sql
postgresql/schemas/: service_dynamic_configs.sql  uservice_dynconf.sql
public/: index.html  manifest.json
schemas/postgresql/: service_dynamic_configs.sql
src/: hello.cpp  main.cpp
src/auth/: auth.cpp
src/cache/: configs_cache.cpp  configs_cache.hpp  settings_cache.cpp  settings_cache.hpp
src/cache/configs/: configs_cache.cpp  configs_cache.hpp
src/cache/services/: services_cache.cpp  services_cache.hpp
src/components/: pg_init.cpp  pg_init.hpp
src/handlers/: admin_v1_configs.cpp  admin_v1_configs.hpp  admin_v1_configs_delete.cpp  admin_v1_configs_delete.hpp  configs.cpp  configs.hpp  configs_delete.cpp  configs_delete.hpp  configs_values.cpp  configs_values.hpp
src/handlers/admin/options/: view.cpp  view.hpp
src/handlers/admin/v1/post-configs/: view.cpp  view.hpp
src/handlers/admin/v1/post-configs_delete/: view.cpp  view.hpp
src/handlers/admin/v2/delete-configs_uuid/: view.cpp  view.hpp
src/handlers/admin/v2/get-configs/: view.cpp  view.hpp
src/handlers/admin/v2/get-configs_uuid/: view.cpp  view.hpp
src/handlers/admin/v2/get-services/: view.cpp  view.hpp
src/handlers/admin/v2/patch-configs_uuid/: view.cpp  view.hpp
src/handlers/admin/v2/post-configs/: view.cpp  view.hpp
src/handlers/admin/v2/post-configs_uuid_clone/: view.cpp  view.hpp
src/handlers/admin/v2/post-service_uuid_clone/: view.cpp  view.hpp
src/handlers/admin/v2/post-services_uuid_clone/: view.cpp  view.hpp
src/handlers/auth/: auth.cpp  auth.hpp
src/handlers/configs_get/: view.cpp  view.hpp
src/handlers/delete-variables_uuid/: view.cpp  view.hpp
src/handlers/delete_variable/: view.cpp  view.hpp
src/handlers/get-configs/: view.cpp  view.hpp
src/handlers/get-variables/: view.cpp  view.hpp
src/handlers/get-variables_uuid/: view.cpp  view.hpp
src/handlers/patch-variables_uuid/: view.cpp  view.hpp
src/handlers/post-configs_uuid_clone/: view.cpp  view.hpp
src/handlers/post-configs_values/: view.cpp  view.hpp
src/handlers/post-variables/: view.cpp  view.hpp
src/handlers/variables_get/: view.cpp  view.hpp
src/middleware/: hello.cpp  hello.hpp
src/models/: config.hpp  configvariable.cpp  configvariable.hpp  get_variables_responce.cpp  get_variables_responce.hpp  responce.cpp  service.hpp  variablewithdate.cpp  variablewithdate.hpp
src/models/config/: config.hpp
src/models/key/: key.cpp  key.hpp
src/models/service/: service.hpp
src/sql/: sql_query.hpp
src/utils/: make_error.cpp  make_error.hpp
tests/: CMakeLists.txt  conftest.py  requirements.txt  test_add_configs.py  test_basic.py  test_config_values.py  test_configs_uuid_post_clone.py  test_configs_values.py  test_default_values.py  test_delete_configs.py  test_delete_configs_uuid.py  test_delete_variable.py  test_get-configs.py  test_get-variables.py  test_get_configs.py  test_get_configs_uuid.py  test_get_variables.py  test_post_variables.py  test_variable_uuid_get.py  test_variable_uuid_patch.py
tests/static/default/: custom_configs.sql  default_configs.sql  dynamic_config_fallback.json
tests/v1/: old_test_add_configs.py  test_add_configs.py  test_delete_configs.py
tests/v2/: test_config_values.py  test_delete_configs_uuid.py  test_get_configs.py  test_get_configs_uuid.py  test_get_services.py  test_patch_configs_uuid.py  test_post_config_uuid_clone.py  test_post_configs.py  test_post_service_uuid_clone.py
tools/pg/: service-postgresql
